--- a/PoC/demo.ipynb
+++ b/PoC/demo.ipynb
@@ -16,11 +16,32 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LLM is explicitly disabled. Using MockLLM.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from vector_store import FaissVS\n",
+    "from pdf_utils import post_load_process_pdf\n",
+    "\n",
+    "# Create and populate Vector Store\n",
+    "faiss_vs = FaissVS()\n",
+    "faiss_vs.create_vector_store(post_load_process_pdf(\"nlp_data.pkl\"), \"vector_store\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 4/4 [00:06<00:00,  1.73s/it]\n",
-      "Could not cache non-existence of file. Will ignore error and continue. Error: [Errno 13] Permission denied: '/tmp/llama_index/models--BAAI--bge-base-en/.no_exist/b737bf5dcc6ee8bdc530531266b4804a5d77b5d8/chat_template.jinja'\n"
+      "Loading checkpoint shards: 100%|██████████| 4/4 [00:31<00:00,  7.77s/it]\n"
      ]
     },
     {
@@ -35,16 +56,18 @@
     "from inference import MINI\n",
     "from IPython.display import Markdown\n",
     "\n",
-    "mini = MINI('test')\n",
+    "# Initialize RAG and change the k-similarity parameter\n",
+    "mini = MINI()\n",
     "mini.change_k_similarity(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function to display the response\n",
     "def printAll(response):\n",
     "    excerpt = response[1][0]['excerpt']\n",
     "    file_name = response[1][0]['file_name']\n",
@@ -59,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,10 +93,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n",
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n",
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n",
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
+     ]
+    }
+   ],
    "source": [
+    "# Query the MINI model with the questions\n",
     "responses = []\n",
     "for question in questions:\n",
     "    responses.append(mini.query(question))"
@@ -81,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +246,7 @@
        "\n",
        "* Initially, a complete graph with at least one vertex (m0 ≥ 1) is created.\n",
        "* At each subsequent time step, a new vertex is added to the graph, along with no more than m0 edges, according to the preferential attachment rule Π(ki) ∝ ki.\n",
-       "* The process terminates at any time t = N.\n",
+       "* The process terminates at any given time step t = N.\n",
        "\n",
        "This algorithm simulates the growth of complex networks by iteratively adding new nodes and edges based on the existing network structure. The preferential attachment rule favors nodes with higher degrees, which leads to the emergence of hubs and a scale-free degree distribution."
       ],
@@ -303,12 +343,10 @@
        "\n",
        "        RESPONSE:\n",
        "\n",
-       "According to the excerpt, First Normal Form (1NF) is described as follows:\n",
+       "First Normal Form (1NF) is a fundamental concept in relational databases. According to Maciej Grzenda's definition, a database table is said to be in 1NF if it meets two essential conditions:\n",
        "\n",
-       "* A primary key must be present in the table and must be identified.\n",
-       "* No repeating attributes can be present; non-atomic values must be eliminated.\n",
-       "\n",
-       "To achieve 1NF, if a non-atomic value is a list of features of a record, multiple columns need to be"
+       "1. **Primary Key**: The table must have a primary key, which uniquely identifies each record or row in the table.\n",
+       "2. **No Repeating"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -509,7 +547,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "NLP",
    "language": "python",
    "name": "python3"
   },
@@ -523,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
